# Othello

./: .gitignore  CMakeLists.txt  Makefile  ai.cpp  ai.h  board.cpp  board.h  game.cpp  game.h  main.cpp  network.cpp  network.h  replay.cpp  replay.h  themes.h  vcpkg.json
.github/workflows/: build.yml
Othello-Test/: run_out.txt
build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
build_msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Othello.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  othello.vcxproj  othello.vcxproj.filters
build_msvc/Release/: othello.exp  othello.lib  out2.txt
build_msvc/othello.dir/Release/: othello.exe.recipe
build_msvc/othello.dir/Release/othello.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  othello.lastbuildstate
build_msvc/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_msvc/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
build_msvc/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_msvc/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
scripts/: build_windows.ps1  installer.iss
